# xen_app_stub

./: CMakeLists.txt  README.md  app.ld  app_entry.c  app_syscall_numbers.h  app_syscalls_a64.S  app_syscalls_asm.S  elf_note.h  syscalls.h  toolchain-aarch64.cmake
libutils/isoc/: isoc.cmake
